# listup_law

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  search_data.rs
