[package]
name = "listup_law"
version = "0.5.0"
edition = "2021"
description = "法律のXMLファイルがあるフォルダから、法律の公布年月日やファイル置き場などのデータをリストアップしてJSONファイルにする"
license = "MIT"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
repository = "https://github.com/japanese-law-analysis/listup_law.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[badges]
github = { repository = "japanese-law-analysis/listup_law", workflow = "Rust CI" }

[dependencies]
anyhow = "1.0.57"
clap = {version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
encoding_rs = "0.8.31"
quick-xml = { version = "0.26.0", features = ["async-tokio", "encoding"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = { version = "1.22.0", features = ["full"]}
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16",  features = ["registry"] }
